--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -79,6 +79,10 @@ main {
   padding: 0.5em;
 }
 
+h1 {
+  font-size: 1.5em;
+}
+
 .weather-today {
   grid-area: weather-today;
   display: grid;
@@ -86,6 +90,10 @@ main {
   border: 1px solid black;
   padding: 0 0.25em 1em 0.25em;
   width: 100%;
+}
+
+.weather-today h2 {
+  font-size: 1.25em;
 }
 
 .five-day-forecast {
@@ -181,5 +189,9 @@ aside {
 @media screen and (max-width: 767px) {
   .forecast-boxes {
     grid-template: repeat(5, 1fr) / 1fr;
+  }
+
+  .five-day-forecast p {
+    font-size: 0.75em;
   }
 }
