--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -76,7 +76,7 @@ main {
   display: flex;
   height: 100%;
   flex-direction: column;
-  padding: 0.5em;
+  padding: 0.5em 0 0 0.5em;
 }
 
 h1 {
@@ -138,7 +138,7 @@ aside {
   grid-area: aside;
   display: grid;
   grid-template-rows: 1fr 4fr;
-  padding: 0.5em;
+  padding: 0.5em 0 0 0;
   gap: 0.5em;
   width: 100%;
 }
