allows user to clear session's search history

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -210,7 +210,8 @@ aside {
   height: 40px;
 }
 
-.search {
+.search,
+.clear {
   display: grid;
   justify-content: center;
   align-content: center;
