--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -46,10 +46,9 @@ body {
     "aside weather-today"
     "aside five-day";
 
-  grid-template-rows: 1fr 10fr;
+  grid-template-rows: 1fr 8fr;
   grid-template-columns: 1fr 4fr;
   width: 90vw;
-  /* height: fit-content; */
   border: 1px solid black;
   padding: 0.5em;
   margin: 2em;
@@ -80,6 +79,7 @@ main {
   display: flex;
   flex-direction: column;
   padding: 0.5em 0 0 0.5em;
+  width: 100%;
 }
 
 h1 {
@@ -171,8 +171,11 @@ h1 {
 .date,
 .temp,
 .wind,
-.humid {
-  font-size: 1.5em;
+.humid,
+.search,
+.clear,
+.city-search-box h2 {
+  font-size: 1em;
 }
 
 /* ================================================== */
@@ -182,7 +185,7 @@ h1 {
 aside {
   grid-area: aside;
   display: grid;
-  grid-template-rows: 1fr 4fr;
+  grid-template-rows: 1fr 3fr;
   padding: 0.5em 0 0 0;
   gap: 0.5em;
   width: 100%;
@@ -208,6 +211,7 @@ aside {
   padding: 0.25em 0.5em;
   width: 100%;
   height: 40px;
+  font-size: 1.25em;
 }
 
 .search,
@@ -280,8 +284,11 @@ aside {
   .date,
   .temp,
   .wind,
-  .humid {
-    font-size: 1.25em;
+  .humid,
+  .search,
+  .clear,
+  .city-search-box h2 {
+    font-size: 1em;
   }
 }
 
